# password_guesser

./: .dockerignore  .gitignore  Dockerfile  LICENSE  OPTIMIZATIONS.md  README.md  __init__.py  build.bat  build.sh  config.yaml  docker-compose.yml  pyproject.toml  setup.py  test_modules.py  train.py
.github/workflows/: ci.yml
attack_graph/: __init__.py  analyzer.py  builder.py  graph.py  visualization.py
config/: __init__.py  env.py  initialize.py  validation.py
evaluation/: __init__.py  entropy.py  metrics.py  pipeline.py  strength.py  zxcvbn_lite.py
knowledge_graph/: __init__.py  attack_db.py  cve_db.py  dependency_graph.py  exploit_db.py
models/: __init__.py  attack_team.py  enums.py  expert_router.py  llm_attack_planner.py  llm_extractor.py  llm_provider.py  llm_vuln_analyzer.py  mamba_cuda.py  mamba_password.py  mlp_encoder.py  password_dataset.py  rag_retriever.py  vector_store.py
models/experts/: __init__.py  base.py  credential_expert.py  exploitation_expert.py  lateral_movement_expert.py  post_exploitation_expert.py  reconnaissance_expert.py  vulnerability_expert.py
optimization/: __init__.py  differential_evolution.py  distillation.py  pruning.py  quantization.py  system.py
password_guesser/: __init__.py  cli.py
pcfg/: __init__.py  grammar.py  pcfg.py  training.py
pentest/: __init__.py  evasion.py  executor.py  network.py  orchestrator.py  output_parser.py  report.py  tool_orchestrator.py  windows_compat.py
rl_agent/: __init__.py  action.py  curriculum.py  dual_mode_env.py  environment.py  environment_bridge.py  experience_store.py  lessons_db.py  meta_learner.py  policy.py  reflective_agent.py  reward_shaper.py  state.py  training.py
rules/: __init__.py  engine.py  hashcat_rules.py  patterns.py  rule_optimizer.py
scripts/: __init__.py  attack_localhost.py  demo_attack_team.py  demo_llm_moe_team.py  generate.py  local_scan_test.py  real_attack.py  simulate_attack.py
tests/: test_all.py
training/: __init__.py  distributed.py  monitoring.py
utils/: __init__.py  feature_utils.py  logging.py  password_utils.py  profiling.py
web/: README.md  __init__.py  app.py  attack_demo_api.py  auth.py  pentest_api.py  rate_limit.py  tasks.py  websocket.py
web/static/: attack_demo.html  pentest.html
web/static/css/: pentest.css  style.css
web/static/js/: app.js  pentest.js
web/templates/: index.html
