[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "password-guesser"
version = "1.1.0"
description = "AI-powered targeted password guessing system using MAMBA + Differential Evolution + LLM"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your@email.com"}
]
keywords = ["password", "security", "machine-learning", "mamba", "differential-evolution", "pcfg", "hashcat"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "httpx>=0.24.0",
    "tqdm>=4.65.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "websockets>=11.0",
    "psutil>=5.9.0",
    "prometheus-client>=0.17.0",
    # RAG and Multi-Expert dependencies
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
monitoring = [
    "wandb>=0.15.0",
    "tensorboard>=2.14.0",
]
cuda = [
    "mamba-ssm>=1.0.0",
    "causal-conv1d>=1.0.0",
]
redis = [
    "redis>=4.5.0",
]

[project.scripts]
password-guesser = "password_guesser.cli:main"

[project.urls]
Homepage = "https://github.com/your-repo/password_guesser"
Documentation = "https://github.com/your-repo/password_guesser#readme"
Repository = "https://github.com/your-repo/password_guesser.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["models*", "optimization*", "utils*", "web*", "rules*", "pcfg*", "evaluation*", "data*", "training*", "config*", "attack_graph*", "knowledge_graph*", "rl_agent*", "pentest*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json", "*.html", "*.css", "*.js"]

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
    "gpu: marks tests requiring GPU",
]

[tool.coverage.run]
source = ["models", "optimization", "attack_graph", "knowledge_graph", "rl_agent", "pentest", "rules", "pcfg", "evaluation", "data", "utils", "web"]
omit = ["tests/*", "build/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "pass",
    "raise NotImplementedError",
]
show_missing = true
